// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`decorator-auto-accessors.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Example { @reactive accessor myBool = false; }

=====================================output=====================================
class Example {
  @reactive accessor myBool = false;
}

================================================================================
`;

exports[`decorator-auto-accessors.js format[acorn] 1`] = `
"Unexpected character '@' (1:17)
> 1 | class Example { @reactive accessor myBool = false; }
    |                 ^
  2 |
Cause: Unexpected character '@' (1:16)"
`;

exports[`decorator-auto-accessors.js format[espree] 1`] = `
"Unexpected character '@' (1:17)
> 1 | class Example { @reactive accessor myBool = false; }
    |                 ^
  2 |
Cause: Unexpected character '@'"
`;

exports[`decorators.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@a class A {}

=====================================output=====================================
@a
class A {}

================================================================================
`;

exports[`decorators.js format[acorn] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @a class A {}
    | ^
  2 |
Cause: Unexpected character '@' (1:0)"
`;

exports[`decorators.js format[espree] 1`] = `
"Unexpected character '@' (1:1)
> 1 | @a class A {}
    | ^
  2 |
Cause: Unexpected character '@'"
`;

exports[`deferred-import-evaluation.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import defer * as ns from "dep";

=====================================output=====================================
import defer * as ns from "dep";

================================================================================
`;

exports[`deferred-import-evaluation.js format[acorn] 1`] = `
"Unexpected token (1:14)
> 1 | import defer * as ns from "dep";
    |              ^
  2 |
Cause: Unexpected token (1:13)"
`;

exports[`deferred-import-evaluation.js format[espree] 1`] = `
"Unexpected token * (1:14)
> 1 | import defer * as ns from "dep";
    |              ^
  2 |
Cause: Unexpected token *"
`;

exports[`destructuring-private.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
class Example { #x = 1; method() { const { #x: x } = this; } }

=====================================output=====================================
class Example {
  #x = 1;
  method() {
    const { #x: x } = this;
  }
}

================================================================================
`;

exports[`destructuring-private.js format[acorn] 1`] = `
"Unexpected token (1:44)
> 1 | class Example { #x = 1; method() { const { #x: x } = this; } }
    |                                            ^
  2 |
Cause: Unexpected token (1:43)"
`;

exports[`destructuring-private.js format[espree] 1`] = `
"Unexpected token #x (1:44)
> 1 | class Example { #x = 1; method() { const { #x: x } = this; } }
    |                                            ^
  2 |
Cause: Unexpected token #x"
`;

exports[`destructuring-private.js format[meriyah] 1`] = `
"Unexpected token: 'PrivateField' (1:44)
> 1 | class Example { #x = 1; method() { const { #x: x } = this; } }
    |                                            ^
  2 |
Cause: [1:43-1:44]: Unexpected token: 'PrivateField'"
`;

exports[`destructuring-private.js format[oxc] 1`] = `
"Private identifier '#x' is not allowed in property names (1:44)
> 1 | class Example { #x = 1; method() { const { #x: x } = this; } }
    |                                            ^^
  2 |"
`;

exports[`destructuring-private.js format[yuku] 1`] = `
"Unexpected token '#x' as property key (1:44)
> 1 | class Example { #x = 1; method() { const { #x: x } = this; } }
    |                                            ^^
  2 |"
`;

exports[`discard-binding.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
using void = new Lock(mutex)

=====================================output=====================================
using void = new Lock(mutex);

================================================================================
`;

exports[`discard-binding.js format[acorn] 1`] = `
"Unexpected keyword 'void' (1:7)
> 1 | using void = new Lock(mutex)
    |       ^
  2 |
Cause: Unexpected keyword 'void' (1:6)"
`;

exports[`discard-binding.js format[espree] 1`] = `
"Unexpected keyword 'void' (1:7)
> 1 | using void = new Lock(mutex)
    |       ^
  2 |
Cause: Unexpected keyword 'void'"
`;

exports[`discard-binding.js format[meriyah] 1`] = `
"Unexpected token: 'void' (1:7)
> 1 | using void = new Lock(mutex)
    |       ^^^^
  2 |
Cause: [1:6-1:10]: Unexpected token: 'void'"
`;

exports[`discard-binding.js format[oxc] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:6)
> 1 | using void = new Lock(mutex)
    |      ^
  2 |"
`;

exports[`discard-binding.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found 'void' (1:7)
> 1 | using void = new Lock(mutex)
    |       ^^^^
  2 |"
`;

exports[`do-expressions.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var a = do { if (true) { 'hi'; } };

=====================================output=====================================
var a = do {
  if (true) {
    ("hi");
  }
};

================================================================================
`;

exports[`do-expressions.js format[acorn] 1`] = `
"Unexpected token (1:9)
> 1 | var a = do { if (true) { 'hi'; } };
    |         ^
  2 |
Cause: Unexpected token (1:8)"
`;

exports[`do-expressions.js format[espree] 1`] = `
"Unexpected token do (1:9)
> 1 | var a = do { if (true) { 'hi'; } };
    |         ^
  2 |
Cause: Unexpected token do"
`;

exports[`do-expressions.js format[meriyah] 1`] = `
"Unexpected token: 'do' (1:9)
> 1 | var a = do { if (true) { 'hi'; } };
    |         ^^
  2 |
Cause: [1:8-1:10]: Unexpected token: 'do'"
`;

exports[`do-expressions.js format[oxc] 1`] = `
"Unexpected token (1:9)
> 1 | var a = do { if (true) { 'hi'; } };
    |         ^^
  2 |"
`;

exports[`do-expressions.js format[yuku] 1`] = `
"'do' is reserved and cannot be used as an identifier (1:9)
> 1 | var a = do { if (true) { 'hi'; } };
    |         ^^
  2 |"
`;

exports[`export-default-from.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
export v from "mod"

=====================================output=====================================
export v from "mod";

================================================================================
`;

exports[`export-default-from.js format[acorn] 1`] = `
"Unexpected token (1:8)
> 1 | export v from "mod"
    |        ^
  2 |
Cause: Unexpected token (1:7)"
`;

exports[`export-default-from.js format[espree] 1`] = `
"Unexpected token v (1:8)
> 1 | export v from "mod"
    |        ^
  2 |
Cause: Unexpected token v"
`;

exports[`export-default-from.js format[meriyah] 1`] = `
"Unexpected token: 'identifier' (1:8)
> 1 | export v from "mod"
    |        ^
  2 |
Cause: [1:7-1:8]: Unexpected token: 'identifier'"
`;

exports[`export-default-from.js format[oxc] 1`] = `
"Unexpected token (1:8)
> 1 | export v from "mod"
    |        ^
  2 |"
`;

exports[`export-default-from.js format[yuku] 1`] = `
"Expected declaration after 'export', but found 'v' (1:8)
> 1 | export v from "mod"
    |        ^
  2 |"
`;

exports[`flow-comments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
/*:: type Foo = {...}; */

=====================================output=====================================
/*:: type Foo = {...}; */

================================================================================
`;

exports[`function-bind.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a::b

=====================================output=====================================
a::b;

================================================================================
`;

exports[`function-bind.js format[acorn] 1`] = `
"Unexpected token (1:3)
> 1 | a::b
    |   ^
  2 |
Cause: Unexpected token (1:2)"
`;

exports[`function-bind.js format[espree] 1`] = `
"Unexpected token : (1:3)
> 1 | a::b
    |   ^
  2 |
Cause: Unexpected token :"
`;

exports[`function-bind.js format[meriyah] 1`] = `
"Unexpected token: ':' (1:3)
> 1 | a::b
    |   ^
  2 |
Cause: [1:2-1:3]: Unexpected token: ':'"
`;

exports[`function-bind.js format[oxc] 1`] = `
"Unexpected token (1:3)
> 1 | a::b
    |   ^
  2 |"
`;

exports[`function-bind.js format[yuku] 1`] = `
"Unexpected token ':' (1:3)
> 1 | a::b
    |   ^
  2 |"
`;

exports[`function-bind-2.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
::console.log

=====================================output=====================================
::console.log;

================================================================================
`;

exports[`function-bind-2.js format[acorn] 1`] = `
"Unexpected token (1:1)
> 1 | ::console.log
    | ^
  2 |
Cause: Unexpected token (1:0)"
`;

exports[`function-bind-2.js format[espree] 1`] = `
"Unexpected token : (1:1)
> 1 | ::console.log
    | ^
  2 |
Cause: Unexpected token :"
`;

exports[`function-bind-2.js format[meriyah] 1`] = `
"Unexpected token: ':' (1:1)
> 1 | ::console.log
    | ^
  2 |
Cause: [1:0-1:1]: Unexpected token: ':'"
`;

exports[`function-bind-2.js format[oxc] 1`] = `
"Unexpected token (1:1)
> 1 | ::console.log
    | ^
  2 |"
`;

exports[`function-bind-2.js format[yuku] 1`] = `
"Unexpected token ':' (1:1)
> 1 | ::console.log
    | ^
  2 |"
`;

exports[`jsx.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<a attr="b">{s}</a>

=====================================output=====================================
<a attr="b">{s}</a>;

================================================================================
`;

exports[`module-blocks.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
let m = module { export let y = 1; };

=====================================output=====================================
let m = module {
  export let y = 1;
};

================================================================================
`;

exports[`module-blocks.js format[acorn] 1`] = `
"Unexpected token (1:16)
> 1 | let m = module { export let y = 1; };
    |                ^
  2 |
Cause: Unexpected token (1:15)"
`;

exports[`module-blocks.js format[espree] 1`] = `
"Unexpected token { (1:16)
> 1 | let m = module { export let y = 1; };
    |                ^
  2 |
Cause: Unexpected token {"
`;

exports[`module-blocks.js format[meriyah] 1`] = `
"Unexpected token: '{' (1:16)
> 1 | let m = module { export let y = 1; };
    |                ^
  2 |
Cause: [1:15-1:16]: Unexpected token: '{'"
`;

exports[`module-blocks.js format[oxc] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:15)
> 1 | let m = module { export let y = 1; };
    |               ^
  2 |"
`;

exports[`module-blocks.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found '{' (1:16)
> 1 | let m = module { export let y = 1; };
    |                ^
  2 |"
`;

exports[`optional-chaining-assign.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
x?.prop = 2

=====================================output=====================================
x?.prop = 2;

================================================================================
`;

exports[`optional-chaining-assign.js format[acorn] 1`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | x?.prop = 2
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side (1:0)"
`;

exports[`optional-chaining-assign.js format[espree] 1`] = `
"Optional chaining cannot appear in left-hand side (1:1)
> 1 | x?.prop = 2
    | ^
  2 |
Cause: Optional chaining cannot appear in left-hand side"
`;

exports[`optional-chaining-assign.js format[meriyah] 1`] = `
"Invalid left-hand side in assignment (1:9)
> 1 | x?.prop = 2
    |         ^
  2 |
Cause: [1:8-1:9]: Invalid left-hand side in assignment"
`;

exports[`optional-chaining-assign.js format[oxc] 1`] = `
"Cannot assign to this expression (1:1)
> 1 | x?.prop = 2
    | ^^^^^^^
  2 |"
`;

exports[`optional-chaining-assign.js format[yuku] 1`] = `
"Optional chaining is not allowed in assignment pattern (1:1)
> 1 | x?.prop = 2
    | ^^^^^^^
  2 |"
`;

exports[`partial-application.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
f(?, a)

=====================================output=====================================
f(?, a);

================================================================================
`;

exports[`partial-application.js format[acorn] 1`] = `
"Unexpected token (1:3)
> 1 | f(?, a)
    |   ^
  2 |
Cause: Unexpected token (1:2)"
`;

exports[`partial-application.js format[espree] 1`] = `
"Unexpected token ? (1:3)
> 1 | f(?, a)
    |   ^
  2 |
Cause: Unexpected token ?"
`;

exports[`partial-application.js format[meriyah] 1`] = `
"Unexpected token: '?' (1:3)
> 1 | f(?, a)
    |   ^
  2 |
Cause: [1:2-1:3]: Unexpected token: '?'"
`;

exports[`partial-application.js format[oxc] 1`] = `
"Unexpected token (1:3)
> 1 | f(?, a)
    |   ^
  2 |"
`;

exports[`partial-application.js format[yuku] 1`] = `
"Unexpected token '?' (1:3)
> 1 | f(?, a)
    |   ^
  2 |"
`;

exports[`pipeline-operator.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
a |> b

=====================================output=====================================
a |> b;

================================================================================
`;

exports[`pipeline-operator.js format[acorn] 1`] = `
"Unexpected token (1:4)
> 1 | a |> b
    |    ^
  2 |
Cause: Unexpected token (1:3)"
`;

exports[`pipeline-operator.js format[espree] 1`] = `
"Unexpected token > (1:4)
> 1 | a |> b
    |    ^
  2 |
Cause: Unexpected token >"
`;

exports[`pipeline-operator.js format[meriyah] 1`] = `
"Unexpected token: '>' (1:4)
> 1 | a |> b
    |    ^
  2 |
Cause: [1:3-1:4]: Unexpected token: '>'"
`;

exports[`pipeline-operator.js format[oxc] 1`] = `
"Unexpected token (1:4)
> 1 | a |> b
    |    ^
  2 |"
`;

exports[`pipeline-operator.js format[yuku] 1`] = `
"Unexpected token '>' (1:4)
> 1 | a |> b
    |    ^
  2 |"
`;

exports[`source-phase-imports.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
import source x from "./x"

=====================================output=====================================
import source x from "./x";

================================================================================
`;

exports[`source-phase-imports.js format[acorn] 1`] = `
"Unexpected token (1:15)
> 1 | import source x from "./x"
    |               ^
  2 |
Cause: Unexpected token (1:14)"
`;

exports[`source-phase-imports.js format[espree] 1`] = `
"Unexpected token x (1:15)
> 1 | import source x from "./x"
    |               ^
  2 |
Cause: Unexpected token x"
`;

exports[`throw-expressions.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
() => throw new Error("")

=====================================output=====================================
() => throw new Error("");

================================================================================
`;

exports[`throw-expressions.js format[acorn] 1`] = `
"Unexpected token (1:7)
> 1 | () => throw new Error("")
    |       ^
  2 |
Cause: Unexpected token (1:6)"
`;

exports[`throw-expressions.js format[espree] 1`] = `
"Unexpected token throw (1:7)
> 1 | () => throw new Error("")
    |       ^
  2 |
Cause: Unexpected token throw"
`;

exports[`throw-expressions.js format[meriyah] 1`] = `
"Unexpected token: 'throw' (1:7)
> 1 | () => throw new Error("")
    |       ^^^^^
  2 |
Cause: [1:6-1:11]: Unexpected token: 'throw'"
`;

exports[`throw-expressions.js format[oxc] 1`] = `
"Unexpected token (1:7)
> 1 | () => throw new Error("")
    |       ^^^^^
  2 |"
`;

exports[`throw-expressions.js format[yuku] 1`] = `
"'throw' is reserved and cannot be used as an identifier (1:7)
> 1 | () => throw new Error("")
    |       ^^^^^
  2 |"
`;

exports[`typescript.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
var a: string = "";

=====================================output=====================================
var a: string = "";

================================================================================
`;

exports[`typescript.js format[__babel_estree] 1`] = `
"Unexpected token (1:6)
> 1 | var a: string = "";
    |      ^
  2 |
Cause: Unexpected token (1:5)"
`;

exports[`typescript.js format[acorn] 1`] = `
"Unexpected token (1:6)
> 1 | var a: string = "";
    |      ^
  2 |
Cause: Unexpected token (1:5)"
`;

exports[`typescript.js format[babel] 1`] = `
"Unexpected token (1:6)
> 1 | var a: string = "";
    |      ^
  2 |
Cause: Unexpected token (1:5)"
`;

exports[`typescript.js format[espree] 1`] = `
"Unexpected token : (1:6)
> 1 | var a: string = "";
    |      ^
  2 |
Cause: Unexpected token :"
`;

exports[`typescript.js format[meriyah] 1`] = `
"Unexpected token: ':' (1:6)
> 1 | var a: string = "";
    |      ^
  2 |
Cause: [1:5-1:6]: Unexpected token: ':'"
`;

exports[`typescript.js format[oxc] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found none (1:6)
> 1 | var a: string = "";
    |      ^
  2 |"
`;

exports[`typescript.js format[yuku] 1`] = `
"Expected a semicolon or an implicit semicolon after a statement, but found ':' (1:6)
> 1 | var a: string = "";
    |      ^
  2 |"
`;

exports[`v8intrinsic.js format 1`] = `
====================================options=====================================
parsers: ["babel", "babel-ts", "babel-flow"]
                                                      printWidth: 80 (default) |
=====================================input======================================
%DebugPrint(foo);

=====================================output=====================================
%DebugPrint(foo);

================================================================================
`;

exports[`v8intrinsic.js format[acorn] 1`] = `
"Unexpected token (1:1)
> 1 | %DebugPrint(foo);
    | ^
  2 |
Cause: Unexpected token (1:0)"
`;

exports[`v8intrinsic.js format[espree] 1`] = `
"Unexpected token % (1:1)
> 1 | %DebugPrint(foo);
    | ^
  2 |
Cause: Unexpected token %"
`;

exports[`v8intrinsic.js format[meriyah] 1`] = `
"Unexpected token: '%' (1:1)
> 1 | %DebugPrint(foo);
    | ^
  2 |
Cause: [1:0-1:1]: Unexpected token: '%'"
`;

exports[`v8intrinsic.js format[oxc] 1`] = `
"Unexpected token (1:1)
> 1 | %DebugPrint(foo);
    | ^
  2 |"
`;

exports[`v8intrinsic.js format[yuku] 1`] = `
"Unexpected token '%' (1:1)
> 1 | %DebugPrint(foo);
    | ^
  2 |"
`;
